--- a/lesson/index.html
+++ b/lesson/index.html
@@ -1,55 +1,163 @@
 <!DOCTYPE html>
-<html class="wf-gugi-n4-active wf-active" lang="en"><head>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Seth Markle's WDD 230 Assignment Portal">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Seth Markle's WDD 230 Assignment Portal"/>
     <title>WDD 230 - Course Homepage</title>
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/medium.css" media="(max-width: 894px) and (min-width: 650px)">
-    <link rel="stylesheet" href="styles/small.css" media="(max-width: 649px)">
-    <link rel="stylesheet" href="styles/tiny.css" media="(max-width: 310px)"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gugi" media="all">
+    <link rel="stylesheet" href="styles/style.css>">
+    <link rel="stylesheet" href="styles/medium.css" media="(max-width: 654px">
+    <link rel="stylesheet" href="styles/small.css" media="(max-width: 509px)">
+    <link rel="stylesheet" href="styles/tiny.css" media="(max-width: 310px)">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet"> " media="all">
+    <img src="c:\Users\sethr\Documents\BYU-Idaho\mkdir vscode-tutorials\cd vscode-tutorials\images\profile.jpg" alt="Seth Markle profile picture">
 </head>
 <body>
-    <header>
-        <h1>Seth <span class="brk1"></span> Markle</h1>
-        <img src="images/profile.JPG" alt="Seth Markle's picture">
+    <header> grid
+        <h1>
+        "Seth"
+        <span class="brk1"></span>
+        "Markle"
+        </h1>
+        <img src="c:\Users\sethr\Documents\BYU-Idaho\mkdir vscode-tutorials\cd vscode-tutorials\images\profile.jpg" alt="Seth Markle profile picture">
     </header>
     <main>
-        <h2>WDD 230<span class="unBrk2">:</span><span class="brk2"></span> Assignment Portal</h2>
+        <h2>
+            "WDD 230"
+            <span class="unBrk2">:</span>
+            <span class="brk2"></span>
+            "Assignment Portal"
+        </h2>
         <ul onscroll="scrollDown(this)">
-            <li>Lesson 02:
-                <ul>
-                    <li><a href="../lesson2/">Design Principles</a></li>
-                </ul>
-            </li>
-            <li>Lesson 03:
-                <ul>
-                    <li><a href="../lesson3/">Site Planning Page</a></li>
-                </ul>
-            </li>
-            <li>Lesson 04:
-                <ul>
-                    <li><a href="../lesson4/index.html">Flipton County Homepage</a></li>
-                </ul>
-            </li>
-            <li>Lesson 05:
-                <ul>
-                    <li><a href="../lesson5/index.html">Flipton County Homepage (Continued)</a></li>
-                </ul>
-            </li>
-            <li>
-                Lesson 06:
-                <ul>
-                    <li><a href="../lesson6/index.html">Flipton County Homepage</a></li>
-                </ul>
-            </li>
+        <li>
+            "Lesson 2:"
+            <ul>
+                <li>
+
+                    <a href="../lesson2/index.html">Title</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            "Lesson 3:"
+            <ul>
+                <li>
+
+                    <a href="../lesson3/index.html/">Title</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            "Lesson 4:"
+            <ul>
+                <li>
+
+                    <a href="../lesson4/index.html">Title</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            "Lesson 5:"
+            <ul>
+                <li>
+
+                    <a href="../lesson5/index.html>">Title</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            "Lesson 6:"
+            <ul>
+                <li>
+                <a href="../lesson6/index.html">Title</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            "Lesson 7:"
+            <ul>
+                <li>
+
+                    <a href="../lesson7/index.html">title</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            "Lesson 8:"
+            <ul>
+                <li>
+
+                    <a href="../lesson8/index.html">Title</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            "Lesson 9:"
+            <ul>
+                <li>
+
+                    <a href="../lesson9/index.html">title</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            "Lesson 10:"
+            <ul>
+                <li>
+
+                    <a href="../lesson10/index.html">Title</a>
+                </li>
+            </ul>
+        </li>  
+        <li>
+            "Lesson 12:"
+            <ul>
+                <li>
+
+                    <a href="../lesson11/index.html">title</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            "Lesson 13:"
+            <ul>
+                <li>
+
+                    <a href="../lesson12/index.html">Title</a>
+                </li>
+            </ul>
+        </li> 
+        <li>
+            "Lesson 14:"
+            <ul>
+                <li>
+
+                    <a href="../lesson13/index.html">title</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            "Lesson 15:"
+            <ul>
+                <li>
+
+                    <a href="../lesson14/index.html">Title</a>
+                </li>
+            </ul>
+        </li>  
+        <div id="scroll-down" class></div>   
     </main>
     <footer>
-        ©<span id="year">2022</span> | Seth Markle <span class="brk1"></span><span class="unBrk1">|</span> Idaho | <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a><br>
-        <span id="updated">Last Updated: 10/17/2022 10:44:49 am</span>
+        "@"
+        <span id="year">2022</span>
+        "|Seth Markle|"
+        <span class="brk1"></span>
+        <span class="unBrk1">|</span>
+        "BYU-Idaho"
+        <a href="https://byui.edu/online" target="_blank">BYU-Idaho</a>
+        <br>
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="scripts/script.js"></script>
 </body>
 </html>
