--- a/lesson/index.html
+++ b/lesson/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles/small.css" media="(max-width: 509px)">
     <link rel="stylesheet" href="styles/tiny.css" media="(max-width: 310px)">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet"> " media="all">
-    <img src="c:\Users\sethr\Documents\BYU-Idaho\mkdir vscode-tutorials\cd vscode-tutorials\images\profile.jpg" alt="Seth Markle profile picture">
+    <img src="lesson/images/profile.png" alt="Seth Markle profile picture">
 </head>
 <body>
     <header> grid
