--- a/lesson/index.html
+++ b/lesson/index.html
@@ -44,6 +44,15 @@
                     <li><a href="../lesson6/index.html">Flipton County Homepage</a></li>
                 </ul>
             </li>
+            <li>
+                "Lesson 7:"
+                <ul>
+                    <li>
+    
+                        <a href="../lesson7/index.html">title</a>
+                    </li>
+                </ul>
+            </li>
     </main>
     <footer>
         ©<span id="year">2022</span> | Seth Markle <span class="brk1"></span><span class="unBrk1">|</span> Idaho | <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a><br>
