--- a/lesson/index.html
+++ b/lesson/index.html
@@ -20,12 +20,12 @@
         <ul onscroll="scrollDown(this)">
             <li>Lesson 02:
                 <ul>
-                    <li><a href="../lesson2/">Design Principles</a></li>
+                    <li><a href="../lesson2/index.html">Design Principles</a></li>
                 </ul>
             </li>
             <li>Lesson 03:
                 <ul>
-                    <li><a href="../lesson3/">Site Planning Page</a></li>
+                    <li><a href="../lesson3/index.html">Site Planning Page</a></li>
                 </ul>
             </li>
             <li>Lesson 04:
