--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <span class="brk1"></span>
         "Markle"
         </h1>
-        <img src="c:\Users\sethr\Documents\BYU-Idaho\mkdir vscode-tutorials\cd vscode-tutorials\images\profile.jpg" alt="Seth Markle profile picture">
+        <img src="c:\Users\sethofile pictr\Documents\BYU-Idaho\mkdir vscode-tutorials\cd vscode-tutorials\images\profile.jpg">
     </header>
     <main>
         <h2>
