--- a/lesson/index.html
+++ b/lesson/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/medium.css" media="(max-width: 894px) and (min-width: 650px)">
     <link rel="stylesheet" href="styles/small.css" media="(max-width: 649px)">
-    <link rel="stylesheet" href="styles/tiny.css" media="(max-width: 310px)"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gugi" media="all">
+    <link rel="stylesheet" href="styles/tiny.css" media="(max-width: 310px)">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gugi" media="all">
 </head>
 <body>
     <header>
         <h1>Seth <span class="brk1"></span> Markle</h1>
-        <img src="BYU-Idaho/mkdir vscode-tutorials/cd vscode-tutorials/lesson/images/profile">
+        <img src="lesson/images/profile">
     </header>
     <main>
         <h2>WDD 230<span class="unBrk2">:</span><span class="brk2"></span> Assignment Portal</h2>
