--- a/lesson/index.html
+++ b/lesson/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <h1>Seth <span class="brk1"></span> Markle</h1>
-        <img src="lesson/images/profile">
+        <img src="images/profile.png">
     </header>
     <main>
         <h2>WDD 230<span class="unBrk2">:</span><span class="brk2"></span> Assignment Portal</h2>
