--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -39,7 +39,7 @@
             <div>
             <p><span>Brigham Young University - Idaho</span></p>
             <p><a target="_blank" href="https://www.byui.edu/search/result?q=Rule+of+Thirds">byui.edu</a></p>
-            <img src="images/byui-edu-rule-of-thirds.png" alt="example of 'rule of thirds' from byui's website">
+            <img src="images/byui-edu-rule-of-thirds.jpg" alt="example of 'rule of thirds' from byui's website">
             <p>
                 The image at the bottom of the screenshot follows the "Rule
                 of Thirds", the focal point (the woman's face) is off to the
