--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -20,7 +20,7 @@
             <div>
             <p><span>Google Fonts API</span></p>
             <p><a target="_blank" href="https://fonts.google.com/">fonts.google.com</a></p>
-            <img src="images/google-fonts-api-white-space-and-clean-design.png" alt="Google fonts api page for an example of white space and a clean design">
+            <img src="images/googlefonts.jpg" alt="Google fonts api page for an example of white space and a clean design">
             <p>
                 Google Fonts API has a good use of white-space making it have
                 a clean design. The spacing around all the objects allows
