--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -58,7 +58,7 @@
             <div>
             <p><span>GitHub</span></p>
             <p><a target="_blank" href="https://www.github.com/">github.com</a></p>
-            <img src="images/github-alignment.png" alt="example of alignment from the GitHub website">
+            <img src="images/github.jpg" alt="example of alignment from the GitHub website">
             <p>
                 The 6 logos at the bottom are aligned (in pairs) vertically
                 and horizontally, it makes it simple and easy to understand.
