--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -24,15 +24,15 @@
         <ul>
             <li class="toggler hide"><a onclick="toggleMenu()">&#9776; Menu</a></li>
                 <li><a class="  " href="#">Home</a></li>
-                <li><a class="at" href="#">York</a></li>
-                <li><a class="  " href="#">Shilo</a></li>
-                <li><a class="  " href="#">Dover</a></li>
-                <li><a class="  " href="#">Red Lion</a></li>
+                <li><a class="at" href="#">Fork</a></li>
+                <li><a class="  " href="#">Fhilo</a></li>
+                <li><a class="  " href="#">Fover</a></li>
+                <li><a class="  " href="#">Fed Lion</a></li>
                 <li><a class="  " href="#">Gallery</a></li>
             </ul>
         </nav>
         <main>
-            <h2>York Pennsylvania</h2>
+            <h2>Flipton County</h2>
             <div class="place-holder">Weather Listings</div>
             <div class="place-holder">The 5 Day Forecast</div>
             <div class="place-holder">Article</div>
@@ -40,10 +40,7 @@
         </main>
         <footer>
             &copy;<span class="year">2022</span> Seth Markle | <a target="_blank" href="https://byui.edu/online">BYUI Online Learning</a>
-            <span class="last-updated">Something didn't load right, please refresh.</span>
         </footer>
-        <div id="too-small">
-            <h3>Your screen size is too small to view this page</h3>
         </div>
         <script src="scripts/script.js"></script>
     </body>
