--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -2,7 +2,7 @@
 <html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Preston Town Page</title>
+    <title>Flipton County Home Page</title>
     <meta name="description" content="Weather or Not's page for Preston Idaho.
                     Information about the weather for the city of Preston and
                     neighboring towns, cities, and areas.">
