--- a/lesson/index.html
+++ b/lesson/index.html
@@ -53,6 +53,14 @@
                     </li>
                 </ul>
             </li>
+            <li>
+                "Lesson 8:"
+                <ul>
+                    <li>
+                        <a href="../lesson8/index.html">title</a>
+                    </li>
+                </ul>
+            </li>
     </main>
     <footer>
         ©<span id="year">2022</span> | Seth Markle <span class="brk1"></span><span class="unBrk1">|</span> Idaho | <a href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a><br>
