--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flipton County Home Page</title>
-    <meta name="description" content="Weather or Not's page for Preston Idaho.
+    <meta name="description" content="Information for Flipton County.
                     Information about the weather for the city of Preston and
                     neighboring towns, cities, and areas.">
     <link rel="icon" href="images/favicon.ico" type="icon">
