--- a/lesson/index.html
+++ b/lesson/index.html
@@ -31,7 +31,7 @@
             </li>
             <li>Lesson 04:
                 <ul>
-                    <li><a href="../lesson4/index.html">Flipton County Homepage</a></li>
+                    <li><a href="../lesson4/chamber/index.html">Flipton County Homepage</a></li>
                 </ul>
             </li>
             <li>Lesson 05:
