--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -15,7 +15,7 @@
         <h1>Design Principles Document</h1>
     </header>
     <main>
-        <section>
+        <section class="container">
             <h3>Clean Design</h3>
             <div>
             <p><span>Google Fonts API</span></p>
@@ -34,7 +34,7 @@
             </p>
             </div>
         </section>
-        <section>
+        <section class="container">
             <h3>Rule of Thirds</h3>
             <div>
             <p><span>Brigham Young University - Idaho</span></p>
@@ -53,7 +53,7 @@
             </p>
             </div>
         </section>
-        <section>
+        <section class="container">
             <h3>Alignment</h3>
             <div>
             <p><span>GitHub</span></p>
