--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -5,8 +5,9 @@
     <title>Design Principles</title>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/medium.css" media="(max-width: 894px) and (min-width: 650px)">
-    <link rel="stylesheet" href="styles/small.css" media="(max-width: 649px)">
+    <link rel="stylesheet" href="styles/small.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/large.css">
     <link rel="stylesheet" href="styles/tiny.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -15,7 +16,7 @@
         <h1>Design Principles Document</h1>
     </header>
     <main>
-        <section class="container">
+        <section>
             <h3>Clean Design</h3>
             <div>
             <p><span>Google Fonts API</span></p>
@@ -34,7 +35,7 @@
             </p>
             </div>
         </section>
-        <section class="container">
+        <section>
             <h3>Rule of Thirds</h3>
             <div>
             <p><span>Brigham Young University - Idaho</span></p>
@@ -53,7 +54,7 @@
             </p>
             </div>
         </section>
-        <section class="container">
+        <section>
             <h3>Alignment</h3>
             <div>
             <p><span>GitHub</span></p>
