--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -3,15 +3,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flipton County Home Page</title>
-    <meta name="description" content="Information for Flipton County.
-                    Information about the weather for the city of Preston and
-                    neighboring towns, cities, and areas.">
+    <meta name="description" content="Information for Flipton County and the surronding areas."
     <link rel="icon" href="images/favicon.ico" type="icon">
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/medium.css" media="(max-width: 1040px)">
-    <link rel="stylesheet" href="styles/small.css" media="(max-width: 850px)">
-    <link rel="stylesheet" href="styles/tiny.css" media="(max-width: 299px)">
+    <link rel="stylesheet" href="styles/small.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/large.css">
+    <link rel="stylesheet" href="styles/tiny.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="shadow-blocker-1"></div>
