--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flipton County Home Page</title>
-    <meta name="description" content="Information for Flipton County and the surronding areas."
-    <link rel="icon" href="images/favicon.ico" type="icon">
+    <title>Flipton Chamber of Commerce</title>
+    <link rel="icon" href="images/index.png" type="icon">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/medium.css">
@@ -13,11 +13,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="shadow-blocker-1"></div>
-    <div class="shadow-blocker-2"></div>
     <header>
-        <h1>Weather Forcast</h1>
-        <span>Your local weather for the next 5 days.</span>
+        <h1>Event</h1>
+        <span>The latest Flipton Event.</span>
     </header>
     <nav>
         <ul>
