--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -13,30 +13,35 @@
 </head>
 <body>
     <header>
-        <title>Flipton Chamber of Commerce</title>
-        <h1>Event</h1>
-        <span>The latest Flipton Event.</span>
+        <h1>Flipton Chamber of Commerce</h1>
     </header>
     <nav>
         <ul>
             <li class="toggler hide"><a onclick="toggleMenu()">&#9776; Menu</a></li>
-                <li><a class="  " href="#">Home</a></li>
-                <li><a class="at" href="#">Fork</a></li>
-                <li><a class="  " href="#">Fhilo</a></li>
-                <li><a class="  " href="#">Fover</a></li>
-                <li><a class="  " href="#">Fed Lion</a></li>
-                <li><a class="  " href="#">Gallery</a></li>
+                <li><a class="at" href="#">Home</a></li>
+                <li><a class="at" href="#">Discover</a></li>
+                <li><a class="at" href="#">Directory</a></li>
+                <li><a class="at" href="#">Join</a></li>
+                <li><a class="at" href="#">Contact</a></li>
+                <li><a class="at" href="#">Gallery</a></li>
+                <h2>Monday, 14 November 2022</h2>
             </ul>
         </nav>
         <main>
-            <h2>Flipton County</h2>
-            <div class="place-holder">Weather Listings</div>
-            <div class="place-holder">The 5 Day Forecast</div>
-            <div class="place-holder">Article</div>
-            <div class="place-holder">Contact Information</div>
+            <h3>Flipton County</h3>
+            <div class="place-holder">Hero with site name and call to action</div>
+            <div class="place-holder">Event</div>
+            <div class="place-holder">Weather</div>
+            <div class="place-holder">News Release</div>
+            <div class="place-holder">SpotLight1</div>
+            <div class="place-holder">SpotLight2</div>
+            <div class="place-holder">SpotLight3</div>
         </main>
         <footer>
-            &copy;<span class="year">2022</span> Seth Markle | <a target="_blank" href="https://byui.edu/online">BYUI Online Learning</a>
+            <p>Flipton Chamber of Commerce</p>
+            <p>552 Flip way</p> <p>info@flipton.org</p>
+            <p>Flipton, Ohio</p> <p>867-5309</p>
+            &copy;<span class="year">2022</span> Flipton Chamber | Seth Markle | WDD 230 Project | Last Modification: 11/14/2022
         </footer>
         </div>
         <script src="scripts/script.js"></script>
