--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/large.css">
     <link rel="stylesheet" href="styles/tiny.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">      
 </head>
 <body>
     <header>
@@ -19,11 +19,9 @@
         <ul>
             <li class="toggler hide"><a onclick="toggleMenu()">&#9776; Menu</a></li>
                 <li><a class="at" href="#">Home</a></li>
-                <li><a class="at" href="#">Discover</a></li>
                 <li><a class="at" href="#">Directory</a></li>
                 <li><a class="at" href="#">Join</a></li>
                 <li><a class="at" href="#">Contact</a></li>
-                <li><a class="at" href="#">Gallery</a></li>
                 <h2>Monday, 14 November 2022</h2>
             </ul>
         </nav>
@@ -38,9 +36,11 @@
             <div class="place-holder">SpotLight3</div>
         </main>
         <footer>
-            <p>Flipton Chamber of Commerce</p>
-            <p>552 Flip way</p> <p>info@flipton.org</p>
-            <p>Flipton, Ohio</p> <p>867-5309</p>
+            <p>Flipton Chamber of Commerce</p> 
+            <p>552 Flip Way</p>
+            <p>Flipton, Ohio</p>
+            <span>info@flipton.org</span>
+            <p>867-5309</p>
             &copy;<span class="year">2022</span> Flipton Chamber | Seth Markle | WDD 230 Project | Last Modification: 11/14/2022
         </footer>
         </div>
