--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -26,6 +26,15 @@
             </ul>
         </nav>
         <main>
+            <div class="wrapper">
+                <div class="box1"></div>
+                <div class="box2"></div>
+                <div class="box3"></div>
+                <div class="box4"></div>
+                <div class="box5"></div>
+                <div class="box6"></div>
+                <div class="box7"></div>
+              </div>              
             <h3>Flipton County</h3>
             <div class="place-holder">Hero with site name and call to action</div>
             <div class="place-holder">Event</div>
