--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -18,6 +18,9 @@
     <nav>
         <ul>
             <li class="toggler hide"><a onclick="toggleMenu()">&#9776; Menu</a></li>
+            <div id="social">
+                <a href="http://www.facebook.com" target="_blank"><img src="https://cdn.glitch.com/a1a7d992-1c34-42ad-984a-c6dc42449471%2Ffacebook.png?1538411363027" alt="facebook icon"></a>
+                <a href="http://www.twitter.com" target="_blank"><img src="https://cdn.glitch.com/a1a7d992-1c34-42ad-984a-c6dc42449471%2Ftwitter.png?1538411362970" alt="twitter icon"></a>
                 <li><a class="at" href="#">Home</a></li>
                 <li><a class="at" href="#">Directory</a></li>
                 <li><a class="at" href="#">Join</a></li>
