--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -16,15 +16,17 @@
         <h1>Flipton Chamber of Commerce</h1>
     </header>
     <nav>
+        </ul>
         <ul>
-            <li class="toggler hide"><a onclick="toggleMenu()">&#9776; Menu</a></li>
-            <div id="social">
-                <a href="http://www.facebook.com" target="_blank"><img src="https://cdn.glitch.com/a1a7d992-1c34-42ad-984a-c6dc42449471%2Ffacebook.png?1538411363027" alt="facebook icon"></a>
-                <a href="http://www.twitter.com" target="_blank"><img src="https://cdn.glitch.com/a1a7d992-1c34-42ad-984a-c6dc42449471%2Ftwitter.png?1538411362970" alt="twitter icon"></a>
+            <ul class="toggler hide"><a onclick="toggleMenu()">&#9776; Menu</a></li>
+            <ul class="navigation"></ul>    
                 <li><a class="at" href="#">Home</a></li>
                 <li><a class="at" href="#">Directory</a></li>
                 <li><a class="at" href="#">Join</a></li>
                 <li><a class="at" href="#">Contact</a></li>
+                <div id="social">
+                    <a href="http://www.facebook.com" target="_blank"><img src="https://cdn.glitch.com/a1a7d992-1c34-42ad-984a-c6dc42449471%2Ffacebook.png?1538411363027" alt="facebook icon"></a>
+                    <a href="http://www.twitter.com" target="_blank"><img src="https://cdn.glitch.com/a1a7d992-1c34-42ad-984a-c6dc42449471%2Ftwitter.png?1538411362970" alt="twitter icon"></a>
                 <h2>Monday, 14 November 2022</h2>
             </ul>
         </nav>
@@ -38,7 +40,7 @@
                 <div class="box6"></div>
                 <div class="box7"></div>
               </div>              
-            <h3>Flipton County</h3>
+            <h3></h3>
             <div class="place-holder">Hero with site name and call to action</div>
             <div class="place-holder">Event</div>
             <div class="place-holder">Weather</div>
