--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -16,12 +16,12 @@
         <h1>Flipton Chamber of Commerce</h1>
     </header>
     <nav>
-        </ul>
+        <button>&#9776;</button>
         <ul>
             <ul class="toggler hide"><a onclick="toggleMenu()">&#9776; Menu</a></li>
             <ul class="navigation"></ul>    
                 <li><a class="at" href="#">Home</a></li>
-                <li><a class="at" href="#">Directory</a></li>
+                <li><a class="active" href="#">Directory</a></li>
                 <li><a class="at" href="#">Join</a></li>
                 <li><a class="at" href="#">Contact</a></li>
                 <div id="social">
