--- a/lesson/index.html
+++ b/lesson/index.html
@@ -19,28 +19,28 @@
     <main>
         <h2>WDD 230<span class="unBrk2">:</span><span class="brk2"></span> Assignment Portal</h2>
         <ul onscroll="scrollDown(this)">
-            <li>Lesson 02:
+            <li>Lesson 2:
                 <ul>
                     <li><a href="../lesson2/index.html">Design Principles</a></li>
                 </ul>
             </li>
-            <li>Lesson 03:
+            <li>Lesson 3:
                 <ul>
                     <li><a href="../lesson3/index.html">Site Planning Page</a></li>
                 </ul>
             </li>
-            <li>Lesson 04:
+            <li>Lesson 4:
                 <ul>
                     <li><a href="../lesson4/chamber/index.html">Flipton County Homepage</a></li>
                 </ul>
             </li>
-            <li>Lesson 05:
+            <li>Lesson 5:
                 <ul>
                     <li><a href="../lesson5/index.html">Flipton County Homepage (Continued)</a></li>
                 </ul>
             </li>
             <li>
-                Lesson 06:
+                Lesson 6:
                 <ul>
                     <li><a href="../lesson6/index.html">Flipton County Homepage</a></li>
                 </ul>
@@ -58,6 +58,22 @@
                 <ul>
                     <li>
                         <a href="../lesson8/index.html">title</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                "Lesson 9:"
+                <ul>
+                    <li>
+                        <a href="../lesson9/index.html">title</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                "Lesson 10:"
+                <ul>
+                    <li>
+                        <a href="../lesson10/index.html">Weather API</a>
                     </li>
                 </ul>
             </li>
