--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -16,7 +16,7 @@
         <h1>Flipton Chamber of Commerce</h1>
     </header>
     <nav>
-        <button>&#9776;</button>
+        <class id ="hamburgerBtn"></class><button><span>&#9776;</span>X</button>
         <ul>
             <ul class="toggler hide"><a onclick="toggleMenu()">&#9776; Menu</a></li>
             <ul class="navigation"></ul>    
