--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -30,23 +30,16 @@
                 <h2>Monday, 14 November 2022</h2>
             </ul>
         </nav>
-        <main>
-            <div class="wrapper">
-                <div class="box1"></div>
-                <div class="box2"></div>
-                <div class="box3"></div>
-                <div class="box4"></div>
-                <div class="box5"></div>
-                <div class="box6"></div>
-                <div class="box7"></div>
-              </div>              
-            <div class="place-holder">Hero with site name and call to action</div>
-            <div class="place-holder">Event</div>
-            <div class="place-holder">Weather</div>
-            <div class="place-holder">News Release</div>
-            <div class="place-holder">SpotLight1</div>
-            <div class="place-holder">SpotLight2</div>
-            <div class="place-holder">SpotLight3</div>
+        <main>            
+            <div id="hero" class="place-holder">Hero with site name and call to action</div>
+            <div id="event" class="place-holder">Event</div>
+            <div id="weather" class="place-holder">Weather</div>
+            <div id="news" class="place-holder">News Release</div>
+            <div id="spotlight">
+                <div id="spot1" class="place-holder">SpotLight1</div>
+                <div id="spot2" class="place-holder">SpotLight2</div>
+                <div id="spot3" class="place-holder">SpotLight3</div>
+            </div>
         </main>
         <footer>
             <p>Flipton Chamber of Commerce</p> 
