--- a/lesson/index.html
+++ b/lesson/index.html
@@ -26,12 +26,12 @@
                     <li>Lesson 02: <a href="../lesson2/index.html">Design Principles</a></li>
                     <li>Lesson 03: <a href="../lesson3/index.html">Site Planning Page</a></li>
                     <li>Lesson 04: <a href="../lesson4/chamber/index.html">Flipton County Homepage</a></li>
-                    <li>Lesson 05: <a href="../lesson5/index.html">Flipton County Homepage (Continued)</a></li>
-                    <li>Lesson 06: <a href="../lesson6/index.html">Flipton County Homepage</a></li>
+                    <li>Lesson 05: <a href="../lesson5/index.html">title</a></li>
+                    <li>Lesson 06: <a href="../lesson6/index.html">title</a></li>
                     <li>Lesson 07: <a href="../lesson7/index.html">title</a></li>
                     <li>Lesson 08: <a href="../lesson8/index.html">title</a></li>
                     <li>Lesson 09: <a href="../lesson9/index.html">title</a></li>
-                    <li>Lesson 10: <a href="../lesson10/index.html">Title</a></li>
+                    <li>Lesson 10: <a href="../lesson10/index.html">title</a></li>
                 </ul>
             </div>
             <div class="footer">
