--- a/lesson4/chamber/rework.html
+++ b/lesson4/chamber/rework.html
@@ -51,7 +51,7 @@
     <footer>
         <div class="information">
             <img class="footer_logo" src="images/logo.PNG" alt="footer_logo">
-            <h3>Bolivian Chamber of Commerce</h3>
+            <h3>Flipton Chamber of Commerce</h3>
         </div>
         <div class="contact_info">
             <p>Ave. Arce N 0000, La Paz Bolivia</p>
@@ -67,7 +67,7 @@
                 <span id="year"></span> 
                 Bolivia Chamber of Commerce
             </p>
-            <p>Jonatan Troche | WDD 230 project</p>
+            <p>Seth Markle | WDD 230 Fall 2022</p>
             <div id="last-modify"></div>
         </div>
     </footer>
