--- a/lesson4/chamber/rework.html
+++ b/lesson4/chamber/rework.html
@@ -71,7 +71,6 @@
             <div id="last-modify"></div>
         </div>
     </footer>
-    <script src="js/script.js"></script>
-    <script src="js/date.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
