--- a/lesson4/chamber/rework.html
+++ b/lesson4/chamber/rework.html
@@ -54,9 +54,9 @@
             <h3>Flipton Chamber of Commerce</h3>
         </div>
         <div class="contact_info">
-            <p>Ave. Arce N 0000, La Paz Bolivia</p>
-            <p>info@boliviachamberofcommerce.com ✉</p>
-            <p class="phone">+591 75255654 📞</p>
+            <p>552 Flipton Way, Ohio</p>
+            <p>info@fliptonchamberofcommerce.com ✉</p>
+            <p class="phone">+867-5309 📞</p>
             <a class="direction" href="https://goo.gl/maps/4gFZojvpySmaJZnT8">Location 📍</a>
         </div>
         <div class="footer_line">
