--- a/lesson4/chamber/rework.html
+++ b/lesson4/chamber/rework.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gugi" media="all">
     <title>Chamber of Commerce Project</title>
 </head>
 <body>
