--- a/lesson4/chamber/rework.html
+++ b/lesson4/chamber/rework.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="images/logo.ico">
+    <link rel="shortcut icon" href="images/LOGO GOES HERE">
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
@@ -15,8 +15,8 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="images/index.jpg" alt="bcoc_logo">
-        <h1>Bolivian chamber of Commerce</h1>
+        <img class="logo" src="images/LOGO GOES HERE" alt="logo">
+        <h1>Flipton chamber of Commerce</h1>
         <div id="formatted-date"></div>
         <div class="social_media">
             <a href="https://www.facebook.com/"><img src="images/facebook.png" alt="facebook_logo"></a>
