--- a/lesson4/chamber/rework.html
+++ b/lesson4/chamber/rework.html
@@ -50,7 +50,7 @@
 
     <footer>
         <div class="information">
-            <img class="footer_logo" src="images/logo.PNG" alt="footer_logo">
+            <img class="footer_logo" src="images/LOGO GOES HERE" alt="logo">
             <h3>Flipton Chamber of Commerce</h3>
         </div>
         <div class="contact_info">
