--- a/lesson4/chamber/rework.html
+++ b/lesson4/chamber/rework.html
@@ -19,8 +19,8 @@
         <h1>Flipton chamber of Commerce</h1>
         <div id="formatted-date"></div>
         <div class="social_media">
-            <a href="https://www.facebook.com/"><img src="images/facebook.png" alt="facebook_logo"></a>
-            <a href="https://www.linkedin.com/"><img src="images/linkedin.png" alt="linkedin_logo"></a>
+            <a href="http://www.facebook.com" target="_blank"><img src="https://cdn.glitch.com/a1a7d992-1c34-42ad-984a-c6dc42449471%2Ffacebook.png?1538411363027" alt="facebook icon"></a>
+            <a href="http://www.twitter.com" target="_blank"><img src="https://cdn.glitch.com/a1a7d992-1c34-42ad-984a-c6dc42449471%2Ftwitter.png?1538411362970" alt="twitter icon"></a>
         </div>
         <nav>
             <button id="hamburguer">&#9776;</button>
