--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -2,54 +2,75 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="target" href="images/index.png" type="target">
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/small.css">
-    <link rel="stylesheet" href="styles/medium.css">
-    <link rel="stylesheet" href="styles/large.css">
-    <link rel="stylesheet" href="styles/tiny.css">
-    <link rel="stylesheet" href="style.css">      
+    <link rel="shortcut icon" href="images/LOGO GOES HERE">
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gugi" media="all">
+    <title>Chamber of Commerce Project</title>
 </head>
 <body>
     <header>
-        <h1>Flipton Chamber of Commerce</h1>
-    </header>
-    <nav>
-        <class id ="hamburgerBtn"></class><button><span>&#9776;</span>X</button>
-        <ul>
-            <ul class="toggler hide"><a onclick="toggleMenu()">&#9776; Menu</a></li>
-            <ul class="navigation"></ul>    
-                <li><a class="at" href="#">Home</a></li>
-                <li><a class="active" href="#">Directory</a></li>
-                <li><a class="at" href="#">Join</a></li>
-                <li><a class="at" href="#">Contact</a></li>
-                <div id="social">
-                    <a href="http://www.facebook.com" target="_blank"><img src="https://cdn.glitch.com/a1a7d992-1c34-42ad-984a-c6dc42449471%2Ffacebook.png?1538411363027" alt="facebook icon"></a>
-                    <a href="http://www.twitter.com" target="_blank"><img src="https://cdn.glitch.com/a1a7d992-1c34-42ad-984a-c6dc42449471%2Ftwitter.png?1538411362970" alt="twitter icon"></a>
-                <h2>Monday, 14 November 2022</h2>
+        <img class="logo" src="images/LOGO GOES HERE" alt="logo">
+        <h1>Flipton chamber of Commerce</h1>
+        <div id="formatted-date"></div>
+        <div class="social_media">
+            <a href="http://www.facebook.com" target="_blank"><img src="https://cdn.glitch.com/a1a7d992-1c34-42ad-984a-c6dc42449471%2Ffacebook.png?1538411363027" alt="facebook icon"></a>
+            <a href="http://www.twitter.com" target="_blank"><img src="https://cdn.glitch.com/a1a7d992-1c34-42ad-984a-c6dc42449471%2Ftwitter.png?1538411362970" alt="twitter icon"></a>
+        </div>
+        <nav>
+            <button id="hamburguer">&#9776;</button>
+            <ul id="primaryNav">
+                <li class="nav_menu_item"><a href="index.html" class="nav-link">Discover</a></li>
+                <li class="nav_menu_item"><a href="#" class="nav-link">Directory</a></li>
+                <li class="nav_menu_item"><a href="#" class="nav-link">Join</a></li>
+                <li class="nav_menu_item"><a href="#" class="nav-link">Contact</a></li>
             </ul>
         </nav>
-        <main>            
-            <div id="hero" class="place-holder">Hero with site name and call to action</div>
-            <div id="event" class="place-holder">Event</div>
-            <div id="weather" class="place-holder">Weather</div>
-            <div id="news" class="place-holder">News Release</div>
-            <div id="spotlight">
-                <div id="spot1" class="place-holder">SpotLight1</div>
-                <div id="spot2" class="place-holder">SpotLight2</div>
-                <div id="spot3" class="place-holder">SpotLight3</div>
+    </header>
+
+    <main>
+        <section class="container">
+            <p class="hero">Hero with site name and call to action</p>
+            <p class="news">News Release</p>
+            <p class="events">Events</p>
+            <p class="weather">Weather</p>
+            <p class="join">Join</p>
+            <div class="spotlight">
+                <p class="spotlight-1">Spotlight 1</p>
+                <p class="spotlight-2">Spotlight 2</p>
+                <p class="spotlight-3">Spotlight 3</p>
             </div>
-        </main>
-        <footer>
-            <p>Flipton Chamber of Commerce</p> 
-            <p>552 Flip Way</p>
-            <p>Flipton, Ohio</p>
-            <span>info@flipton.org</span>
-            <p>867-5309</p>
-            &copy;<span class="year">2022</span> Flipton Chamber | Seth Markle | WDD 230 Project | Last Modification: 11/14/2022
-        </footer>
+        </section>
+    </main>
+
+    <footer>
+        <div class="information">
+            <img class="footer_logo" src="images/LOGO GOES HERE" alt="logo">
+            <h3>Flipton Chamber of Commerce</h3>
         </div>
-        <script src="scripts/script.js"></script>
-    </body>
+        <div class="contact_info">
+            <p>552 Flipton Way, Ohio</p>
+            <p>info@fliptonchamberofcommerce.com ✉</p>
+            <p class="phone">+867-5309 📞</p>
+            <a class="direction" href="https://goo.gl/maps/4gFZojvpySmaJZnT8">Location 📍</a>
+        </div>
+        <div class="footer_line">
+            <hr>
+            <br>
+            <p>
+                ©
+                <span id="year"></span> 
+                Flipton Chamber of Commerce
+            </p>
+            <p>Seth Markle | WDD 230 Fall 2022</p>
+            <div id="last-modify"></div>
+        </div>
+    </footer>
+    <script src="scripts/script.js"></script>
+</body>
 </html>
