--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="images/LOGO GOES HERE">
-    <link rel="stylesheet" href="css/small.css">
-    <link rel="stylesheet" href="css/medium.css">
-    <link rel="stylesheet" href="css/large.css">
+    <link rel="shortcut icon" href="images/logo.ico">
+    <link rel="stylesheet" href="styles/small.css">
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gugi" media="all">
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="images/LOGO GOES HERE" alt="logo">
+        <img class="logo" src="images/logo.PNG" alt="bcoc_logo">
         <h1>Flipton chamber of Commerce</h1>
         <div id="formatted-date"></div>
         <div class="social_media">
@@ -50,7 +50,7 @@
 
     <footer>
         <div class="information">
-            <img class="footer_logo" src="images/LOGO GOES HERE" alt="logo">
+            <img class="footer_logo" src="images/logo.PNG" alt="footer_logo">
             <h3>Flipton Chamber of Commerce</h3>
         </div>
         <div class="contact_info">
